fix:upcoming event card overflow

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -729,6 +729,7 @@
 
   .up-ev-cards .card-address {
     font-size: 10px;
+    width: 100%;
   }
   .up-ev-cards .card-image-cont {
     width: 120px;
